--- a/views/tienda.html
+++ b/views/tienda.html
@@ -26,10 +26,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
                             <a class="nav-link" href="cursos.html">Cursos</a>
                             <a class="nav-link" href="tienda.html">Tienda</a>
                             <a class="nav-link" href="galeria.html">Galería</a>
+                            <a class="nav-link" href="../index.html">Salir<span class="sr-only">(current)</span></a>
                         </div>
                     </div>
                 </nav>
